Discard non valid xml and avoid unnecessary string creation